adicionando novas alteracoes Branch BRUNO02

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 Git-branchs.xcodeproj/project.xcworkspace/xcuserdata/brunovieirasouza.xcuserdatad/UserInterfaceState.xcuserstate
+Git-branchs.xcodeproj/xcuserdata/brunovieirasouza.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
